units: Bump version to 1.0-alpha.0
In preparation for release add a changelog entry, bump the version, and
update the lock files.

`v1.0` here we come.

Before we merge this we should add:

- #3934 or #3866
- #3933
- #3932
- #3929
- #3926
- #3923
- #3893
- #3866
- #3794

--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -26,7 +26,7 @@ hashes = { package = "bitcoin_hashes", version = "0.16.0", default-features = fa
 hex = { package = "hex-conservative", version = "0.3.0", default-features = false }
 internals = { package = "bitcoin-internals", version = "0.4.0" }
 io = { package = "bitcoin-io", version = "0.2.0", default-features = false }
-units = { package = "bitcoin-units", version = "0.2.0", default-features = false }
+units = { package = "bitcoin-units", version = "1.0.0-alpha.0", default-features = false }
 
 arbitrary = { version = "1.4", optional = true }
 ordered = { version = "0.4.0", optional = true }
