--- a/bitcoin/Cargo.toml
+++ b/bitcoin/Cargo.toml
@@ -33,7 +33,7 @@ internals = { package = "bitcoin-internals", version = "0.4.0", features = ["all
 io = { package = "bitcoin-io", version = "0.2.0", default-features = false, features = ["alloc"] }
 primitives = { package = "bitcoin-primitives", version = "0.101.0", default-features = false, features = ["alloc"] }
 secp256k1 = { version = "0.29.0", default-features = false, features = ["hashes", "alloc"] }
-units = { package = "bitcoin-units", version = "0.2.0", default-features = false, features = ["alloc"] }
+units = { package = "bitcoin-units", version = "1.0.0-alpha.0", default-features = false, features = ["alloc"] }
 
 arbitrary = { version = "1.4", optional = true }
 base64 = { version = "0.22.0", optional = true }
