--- a/io/Cargo.toml
+++ b/io/Cargo.toml
@@ -14,12 +14,14 @@ rust-version = "1.63.0"
 exclude = ["tests", "contrib"]
 
 [features]
-default = ["std"]
+default = ["std", "hashes?/std"]
 std = ["alloc"]
-alloc = []
+alloc = ["hashes?/alloc"]
 
 [dependencies]
 internals = { package = "bitcoin-internals", version = "0.4.0" }
+
+hashes = { package = "bitcoin_hashes", version = "0.16.0", default-features = false, optional = true }
 
 [package.metadata.docs.rs]
 all-features = true
